--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,13 +6,9 @@
 
 //Components
 @import "./components/banner";
-// @import "./components/card";
-// @import "./components/aboutBanner";
-// @import "./components/collapse";
-// @import "./components/carousel";
-// @import "./components/tags";
-// @import "./components/host";
-// @import "./components/rating";
+@import "./components/card";
+@import "./components/aboutBanner";
+
 
 //Layout
 // @import "layouts/";
